@@ -295,9 +295,6 @@ Flag network-uri
   Description: Get Network.URI from the network-uri package
   Default: True
 
-Flag Cryptonite
-  Description: Use the cryptonite library, instead of the older cryptohash
-
 Flag Dbus
   Description: Enable dbus support
 
@@ -362,7 +359,8 @@ Executable git-annex
    byteable,
    stm-chans,
    securemem,
-   crypto-api
+   crypto-api,
+   cryptonite
   CC-Options: -Wall
   GHC-Options: -Wall -fno-warn-tabs
   Extensions: PackageImports
@@ -382,12 +380,6 @@ Executable git-annex
     Build-Depends: network-uri (>= 2.6), network (>= 2.6)
   else
     Build-Depends: network (< 2.6), network (>= 2.4)
-
-  if flag(Cryptonite)
-    Build-Depends: cryptonite
-    CPP-Options: -DWITH_CRYPTONITE
-  else
-    Build-Depends: cryptohash (>= 0.11.0)
 
   if (os(windows))
     Build-Depends: Win32, Win32-extras, unix-compat (>= 0.4.1.3), setenv,
